# pyledger

./: .gitignore  FAX_SERVICE_DOCUMENTATION.md  GAAP_COMPLIANCE_DOCUMENTATION.md  IFRS_COMPLIANCE_DOCUMENTATION.md  LICENSE  ODOO_COMPARISON.md  PAYMENT_CLEARING_DOCUMENTATION.md  PYTHON_ACCOUNTING_COMPARISON.md  README.md  pyledger.db  pyproject.toml  requirements.txt  setup.py  test_payment_clearing_aging.py  test_pdf_cli.py  test_pdf_generation.py
.claude-plugin/: marketplace.json
.claude/skills/form-5472-filing/: SKILL.md
.claude/skills/form-5472-filing/.claude-plugin/: plugin.json
.claude/skills/form-5472-filing/references/: filing-rules.md  transaction-types.md
.github/workflows/: ci.yml
pyledger/: __init__.py  accounting_tests.py  accounts.py  agent.py  api.py  db.py  fax_service.py  gaap_compliance.py  gaap_compliance_tests.py  ifrs_compliance.py  ifrs_compliance_tests.py  invoices.py  irs_form_maps.py  irs_pdf.py  journal.py  llm_tools.py  main.py  mcp_config.json  mcp_server.py  payment_clearing.py  purchase_orders.py  reports.py  tax_filing.py  test_ai.py  test_db.py  test_fax_service.py  test_invoice_po.py  test_mcp.py  test_pyledger.py  test_tax_filing.py  vector_store.py
